--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="notification-content">
         <p class="notification-message"><strong class="user-name">Jacob Thompson</strong> has joined your group <strong class="blue-text">Chess Club</strong></p>
-        <span class="date">1d ago</span>
+        <span class="date">1 day ago</span>
       </div>
       <div class="red-circle"></div>
     </div>
@@ -62,7 +62,7 @@
       </div>
       <div class="notification-content">
         <p class="notification-message"><strong class="user-name">Rizky Hasanuddin</strong> sent you a private message</p>
-        <span class="date">5d ago</span>
+        <span class="date">5 days ago</span>
         <div class="message-box">
           <p>
             Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
@@ -80,7 +80,7 @@
         <p class="notification-message"><strong class="user-name">Kimberly Smith</strong> commented on your picture</p>
         <span class="date">1 week ago</span>
       </div>
-      <div class="picture-container">
+      <div class="image-container">
         <img height="50px" src="./assets/images/image-chess.webp" alt="Image Chess">
       </div>
     </div>
@@ -104,36 +104,6 @@
         <span class="date">2 weeks ago</span>
       </div>
     </div>
-
-    
   </main>
-
-  <!-- Notifications 3
-
-  Mark all as read
-
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
-
-  Angela Gray followed you
-  5m ago
-
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
-
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
-
-  Kimberly Smith commented on your picture
-  1 week ago
-
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
-
-  Anna Kim left the group Chess Club
-  2 weeks ago -->
-
 </body>
 </html>
